--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
     "@angular/animations": "~13.1.0",
     "@angular/cdk": "^13.1.2",
+    "@angular/cli": "~13.1.2",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
+    "@angular/compiler-cli": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "^13.1.2",
@@ -30,10 +30,12 @@
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "express": "^4.17.3",
+    "path": "^0.12.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
